# OpenMPTest

./: CMakeLists.txt  atomic.cpp  barrier.cpp  critical.cpp  flush.cpp  for.cpp  lock.cpp  master.cpp  ordered.cpp  parallel.cpp  reduction.cpp  section.cpp  task.cpp  threadprivate.cpp  varscope.cpp
