cmake_minimum_required(VERSION 3.0.0)

macro(create_project PROJECT_NAME)
    project(${PROJECT_NAME} VERSION 0.1.0 LANGUAGES C CXX)
    find_package(OpenMP REQUIRED)
    add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cpp)
    target_link_libraries(${PROJECT_NAME} PRIVATE OpenMP::OpenMP_CXX)
endmacro()

create_project(parallel)
create_project(for)
create_project(section)
create_project(task)
create_project(master)
create_project(critical)
create_project(barrier)
create_project(atomic)
create_project(flush)
create_project(ordered)
create_project(threadprivate)
create_project(varscope)
create_project(reduction)
create_project(lock)